--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <style>
     body{background:#000;color:#fff;font-family:system-ui,Arial;margin:0;padding:40px;text-align:center}
     .navbar{display:flex;justify-content:center;align-items:center;gap:20px;background:#111;padding:14px;font-size:16px;position:relative;margin:-40px -40px 40px -40px}
-    .navbar .invite-btn-left{position:absolute;left:20px;background:#33FF00;color:#fff;padding:10px 18px;border-radius:6px;text-decoration:none;font-weight:600}
+    .navbar .invite-btn-left{position:absolute;left:20px;background:#7AA95C;color:#fff;padding:10px 18px;border-radius:6px;text-decoration:none;font-weight:600}
     .tab-btn{background:#fff;color:#000;padding:8px 14px;border-radius:6px;text-decoration:none;font-weight:600}
-    .invite-btn{background:#33FF00;color:#fff;padding:10px 18px;border-radius:6px;text-decoration:none;font-weight:600}
+    .invite-btn{background:#7AA95C;color:#fff;padding:10px 18px;border-radius:6px;text-decoration:none;font-weight:600}
     .container{padding:40px}
     h1{margin-bottom:20px}
     footer{text-align:center;margin-top:40px;color:#777}
