--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
     p{font-size:16px;line-height:1.5}
     footer{text-align:center;margin-top:40px;color:#777}
     .navbar{display:flex;justify-content:center;align-items:center;gap:20px;background:#111;padding:14px;font-size:16px;position:relative;margin:-40px -40px 40px -40px}
-    .navbar .invite-btn-left{position:absolute;left:20px;background:#1e90ff;color:#fff;padding:10px 18px;border-radius:6px;text-decoration:none;font-weight:600}
+    .navbar .invite-btn-left{position:absolute;left:20px;background:#7AA95C;color:#fff;padding:10px 18px;border-radius:6px;text-decoration:none;font-weight:600}
     .tab-btn{background:#fff;color:#000;padding:8px 14px;border-radius:6px;text-decoration:none;font-weight:600}
   </style>
 </head>
